lab9/tests/algo/good/call_prototype.al
int foo (void);


void main(void)
begin

  foo();

end

int foo (void)
begin

end
