lab9/tests/algo/bad/prototype_after_dec.al
int y;

void foo(void)
begin
end

void foo(void); // PROTOTYPE AFTER DEFINITION!!!

int main(void v)
begin



end